UNOMI-852: Improve robustness against log injection